--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+wis (0.0.2) unstable; urgency=low
+  * the password is stored after return pressed
+
+ -- Jozef Mlich <imlich@unknown>  Fri, 30 Dec 2011 10:49:39 +0100
+
 wis (0.0.1) unstable; urgency=low
 
   * Initial Release.
